<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/firstbg"
    tools:context=".presentation.first.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="116dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/photoProfile"
        android:src="@drawable/ic_photoprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etfirst_insert_name"
        android:layout_width="0dp"
        android:layout_height="39.88dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_white"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/Name"
        android:includeFontPadding="false"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etfirst_insert_word"
        android:layout_width="0dp"
        android:layout_height="39.88dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_white"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/Palindrome"
        android:includeFontPadding="false"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etfirst_insert_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnfirst_check_palindrome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        android:text="@string/Chekckusername"
        android:textColor="#FBF5F5"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etfirst_insert_word" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnfirst_check_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        android:text="@string/Next"
        android:textColor="#ECDADA"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnfirst_check_palindrome" />

</androidx.constraintlayout.widget.ConstraintLayout>