...
                app:layout_constraintTop_toTopOf="@+id/btnback_second" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppinsmedium"
...
